deploy: e3e960f248dace2cba048c40a821c1438656a188

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class='octowrap'>
         <a class='octothorpe' href='#section-'>#</a>
       </div>
-      <dl><dt>src</dt><dd><ul><dl><dt>day1</dt><dd><ul><li><a href="src/day1/main.html">main.html</a></li></ul></dd></dl></ul></dd></dl>
+      <dl><dt>src</dt><dd><ul><dl><dt>day1</dt><dd><ul><li><a href="src/day1/main.html">main.html</a></li></ul></dd></dl><dl><dt>day2</dt><dd><ul><li><a href="src/day2/main.html">main.html</a></li></ul></dd></dl></ul></dd></dl>
     </div>
     <div class='code'>
       
